# PW-Manager

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  PW-Manager.sln  README.md
.github/workflows/: codeql-analysis.yml
PW-Manager/: PW-Manager.vcxproj
PW-Manager/Debug/: vc142.idb
PW-Manager/Debug/PW-Manager.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PW-Manager.lastbuildstate
PW-Manager/DontDelete/: Passwords.db
PW-Manager/src/: Main.cpp  Shared.h
PW-Manager/src/Model/: CopyToClipboard.cpp  CopyToClipboard.h  DatabaseManager.h  FtxuiIncludes.h  ProgramInfo.h
PW-Manager/src/View/: UI_AddNote.cpp  UI_AddNote.h  UI_ConfirmDelete.cpp  UI_ConfirmDelete.h  UI_Credits.cpp  UI_Credits.h  UI_EditNote.cpp  UI_EditNote.h  UI_Login.cpp  UI_Login.h  UI_Menu.cpp  UI_Menu.h  UI_MenuSettings.cpp  UI_NoteSettings.cpp  UI_NoteSettings.h  UI_Settings.cpp  UI_Settings.h  UI_Signup.cpp  UI_Signup.h  UI_Start.cpp
PW-Manager/src/ViewModel/: Edit.cpp  Edit.h  Login.cpp  Login.h  Menu.cpp  Menu.h  Signup.cpp  Signup.h
PW-Manager/x64/Debug/: PW-Manager.exe.recipe  PW-Manager.vcxproj.FileListAbsolute.txt  vc142.idb
PW-Manager/x64/Debug/PW-Manager.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PW-Manager.lastbuildstate  PW-Manager.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build-debug/: gen.sh
build-release/: gen.sh
libs/sqlite3/: CMakeLists.txt
src/: LoginWindow.cpp  LoginWindow.h  Main.cpp  PW-Manager.cpp  PW-Manager.h  RegisterWindow.cpp  RegisterWindow.h  Shared.cpp  Shared.h  StartWindow.cpp  StartWindow.h
src/Model/: CopyToClipboard.h  DatabaseManager.cpp  DatabaseManager.h  FtxuiIncludes.h  Note.h  ProgramInfo.h  Shared.h  User.h
src/View/: UI_AddNote.cpp  UI_AddNote.h  UI_ConfirmDelete.cpp  UI_ConfirmDelete.h  UI_Credits.cpp  UI_Credits.h  UI_EditNote.cpp  UI_EditNote.h  UI_Login.cpp  UI_Login.h  UI_Menu.cpp  UI_Menu.h  UI_MenuSettings.cpp  UI_MenuSettings.h  UI_Register.cpp  UI_Register.h  UI_Settings.cpp  UI_Settings.h  UI_Signup.cpp  UI_Signup.h  UI_Start.cpp  UI_Start.h
src/ViewModel/: Edit.cpp  Edit.h  Login.cpp  Login.h  Menu.cpp  Menu.h  Signup.cpp  Signup.h
